<resources>
    <string name="app_name">Lynes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="add_url2">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_dialog_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete_note_confrim">DELETE NOTE</string>
    <string name="delete_cancel">CANCEL</string>
</resources>