<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutURLDialogContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/backgrund_dialog"
    android:layout_margin="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageAddUrl"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:text="@string/add_url2"
        app:layout_constraintBottom_toBottomOf="@id/imageAddUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddUrl"
        app:layout_constraintTop_toTopOf="@id/imageAddUrl"/>
    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorIcons"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/imageAddUrl"/>

   <TextView
       android:id="@+id/textAdd"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@id/inputURL"
       android:text="ADD"
       android:textSize="@dimen/_13ssp"
       android:includeFontPadding="false"
       android:padding="@dimen/_8sdp"
       android:layout_marginEnd="@dimen/_8sdp"
       android:layout_marginBottom="@dimen/_8sdp"
       android:textColor="@color/colorNoteColor2"
       android:fontFamily="@font/poppins_bold"
       />
    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CANCEL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputURL"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/colorNoteColor2"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_13ssp"
        android:includeFontPadding="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>