<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515"
    tools:context=".ui.NewNoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_backarrow"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imgSaveBtn"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_done"
                android:background="@drawable/bg_done_btn"
                android:padding="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:tint="@color/colorIcons"
                app:layout_constraintBottom_toBottomOf="@id/imgBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgBack"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/inputNoteTitle"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#7B7B7B"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/imgBack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtdateTime"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>

            <ImageView
                android:id="@+id/inputNoteImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputSubtitle"/>
            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:tint="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/inputNoteImage"
                app:layout_constraintTop_toTopOf="@id/inputNoteImage"/>


            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputNoteImage"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textWebURL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp"/>

                <ImageView
                    android:id="@+id/imageRemoveWebUrl"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    android:tint="@color/colorDiscard"
                    />


            </LinearLayout>



            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputSubtitle"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/note_subtitle"
                android:textColor="@color/colortxtSub"
                android:textColorHint="#7B7B7B"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vSubIndicator"
                app:layout_constraintTop_toBottomOf="@id/txtdateTime"/>

                <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"
                    android:id="@+id/vSubIndicator"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="@drawable/bg_sub_indicator"
                    app:layout_constraintBottom_toBottomOf="@id/inputSubtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/inputSubtitle"/>

            <EditText
                android:id="@+id/inputNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="#7B7B7B"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include layout="@layout/layout_misc"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>